# dvLabs

./: README.md  pyproject.toml  requirements.txt
dvlabs/: config.py  utils.py
dvlabs/dataAnalysis/objectDetection/: annotations.py
dvlabs/dataPreparation/objectDetection/: convert_annotations.py
dvlabs/inference/object detection/: visualize.py
dvlabs/inference/objectDetection/: visualize.py
dvlabs/postTraining/objectDetection/: analysis.py  compare.py  detections.py  metrics.py
examples/: convert_annotation_format.py  load_annotations.py  load_detections.py  post_training_analysis.py  post_training_comparison.py  visualize_detection_single_image.py
examples/annotations/coco_jsons/: data.json
examples/annotations/pascal_voc_xmls/: img0002.xml
examples/annotations/yolo_txts/: 000002.txt
examples/resources/: class.names
examples/resources/annotations/coco_jsons/: data.json
